--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10958,6 +10958,72 @@ body #app {
 
 header {
   width: 100%;
-  background-color: red;
+  background: linear-gradient(to right, orange, yellow);
+}
+
+header nav div ul li {
+  font-size: 24px;
+}
+
+header .header-content-guest {
+  display: flex;
+  justify-content: center;
+}
+
+header .header-content-guest .hcg-left {
+  width: 50%;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+header .header-content-guest .hcg-left h2 {
+  color: #eb6338;
+}
+
+header .header-content-guest .hcg-left .header-searchbar {
+  padding-top: 30px;
+}
+
+header .header-content-guest .hcg-left .header-searchbar input {
+  width: 200px;
+  border-radius: 5px;
+}
+
+header .header-content-guest .hcg-left .header-searchbar button {
+  padding: 4px 24px;
+  border-radius: 10px;
+  background-color: #eb6338;
+  border: 0px;
+  font-size: 20px;
+  color: yellow;
+}
+
+header .header-content-guest div.hcg-right {
+  width: 40%;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+header .header-content-guest div.hcg-right img {
+  height: 150px;
+  margin-right: 10px;
+}
+
+header .header-content-guest div.hcg-right i {
+  font-size: 100px;
+  color: #eb6338;
+  margin-right: 10px;
+}
+
+main h1.prova {
+  font-size: 60px;
+  background-image: linear-gradient(to right, yellow, orange, red);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
