--- a/resources/sass/partials/_main.scss
+++ b/resources/sass/partials/_main.scss
@@ -1,17 +1,63 @@
 
 main{
   width: 100%;
+  // sezione della parte ristoranti
+  & .choose-restaurant{
 
-  & .guest-restaurants{
-    width: 60%;
-    margin: auto;
-    background-color: red;
     & h2 {
       margin-bottom: 30px;
+      text-align: center;
     }
+    & .guest-restaurants{
+      width: 50%;
+      margin: auto;
+      display: flex;
 
-    & .card-restaurant{
-      
+      & .card-restaurant{
+        width: calc(100% / 3 - 40px);
+        height: 400px;
+        margin-right: 40px;
+        border: 1px solid #ff5722;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        &:hover{
+          // box-shadow: 0px 1px 4px 2px grey;
+          box-shadow: 0px 1px 4px 2px  #ff5722;
+        }
+
+        & img{
+          width: 50%;
+          margin-bottom: 20px;
+        }
+
+        & p{
+
+
+          &.rainbow-text {
+            margin-top: 0px;
+            font-size: 30px;
+            margin-bottom: 10px;
+            font-family: sans-serif;
+            background: linear-gradient(to right, #ef5350, #f9a825, #ff5722);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+          }
+        }
+
+        & button{
+          padding: 4px 24px;
+          border-radius: 10px;
+          background-color: #eb6338;
+          border: 0px;
+          font-size: 20px;
+          color: yellow;
+        }
+      }
     }
   }
+
+  // fine sezione ristoranti
 }
