--- a/resources/sass/partials/_main.scss
+++ b/resources/sass/partials/_main.scss
@@ -1,7 +1,7 @@
 
 main{
   width: 100%;
-  // sezione della parte ristoranti
+  // sezione della parte ristoranti guest
   & .choose-restaurant{
 
     & h2 {
@@ -14,16 +14,39 @@ main{
       width: 50%;
       margin: auto;
       display: flex;
+      flex-wrap: wrap;
+
+      @media screen and(max-width: 1200px){
+      justify-content: space-between;
+      }
+
+      @media screen and(max-width: 766px){
+        width: 100%;
+        margin: 0;
+      }
 
       & .card-restaurant{
-        width: calc(100% / 3 - 40px);
-        height: 400px;
-        margin-right: 40px;
+        width: calc(100% / 3 - 60px);
+        height: 300px;
+        margin-right: 60px;
         border: 1px solid #ff5722;
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
+        // justify-content: center;
+        margin-bottom: 20px;
+
+        @media screen and(max-width: 1200px){
+          width: calc(100% / 2 - 40px);
+          height: 240px;
+          margin-right: 0px;
+        }
+
+        @media screen and(max-width: 766px){
+          width: 100%;
+          flex-direction: row;
+
+        }
 
         &:hover{
           // box-shadow: 0px 1px 4px 2px grey;
@@ -31,35 +54,72 @@ main{
         }
 
         & img{
-          width: 50%;
+          width: 40%;
           margin-bottom: 20px;
+          margin-top: 20px;
+
+          @media screen and(max-width: 766px){
+            width: 20%;
+            margin-left: 30px;
+
+          }
         }
 
         & p{
 
+            text-align: center;
+            margin-left: 10px;
+            margin-right: 10px;
 
           &.rainbow-text {
             margin-top: 0px;
-            font-size: 30px;
+            font-size: 24px;
             margin-bottom: 10px;
             font-family: sans-serif;
             background: linear-gradient(to right, #ef5350, #f9a825, #ff5722);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
+
+            @media screen and(max-width: 1200px){
+              font-size: 20px;
+            }
+
+            @media screen and(max-width: 766px){
+            font-size: 30px;
+            padding-left: 30px;
+            padding-right: 30px;
+
+            }
           }
+
+
         }
 
         & button{
-          padding: 4px 24px;
+          padding: 4px 10px;
           border-radius: 10px;
           background-color: #eb6338;
           border: 0px;
-          font-size: 20px;
+          font-size: 16px;
           color: yellow;
+          margin-bottom: 20px;
+
+          @media screen and(max-width: 1200px){
+              padding: 4px 16px;
+              font-size: 12px;
+          }
+          @media screen and(max-width: 766px){
+            padding: 5px 24px;
+            font-size: 20px;
+          }
+
         }
+
       }
     }
   }
+  // fine sezione ristoranti guest
 
-  // fine sezione ristoranti
+  // sezione menu e carrelo
+  
 }
