--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -1,6 +1,20 @@
 header {
   width: 100%;
-  background: linear-gradient(to right, orange, yellow);
+  // background: linear-gradient(to right, orange, yellow);
+  background-image: url('https://www.medicalfacts.it/wp-content/uploads/2020/02/bigstock-Junk-Food-Concept-Unhealthy-F-279475684-900x580.jpg');
+  background-position: center;
+  background-size: cover;
+
+  & .layover{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+  }
+  & nav {
+    background: linear-gradient(to right, #ffeae4, #ffeae4c9);
+    position: fixed;
+    top: 0;
+  }
 
   & nav div ul li {
     font-size: 24px;
@@ -9,6 +23,8 @@ header {
    & .header-content-guest{
      display: flex;
      justify-content: center;
+     background-color: rgba(255, 255, 255, 0.705);
+     
 
      @media screen and(max-width: 992px){
        flex-direction: column-reverse;
