--- a/resources/sass/partials/_footer.scss
+++ b/resources/sass/partials/_footer.scss
@@ -29,6 +29,8 @@ footer {
             color:rgb(209, 207, 204);
             &:hover{
                 color:orange;  
+              @include transition;
+
             }
           }
           li{
