--- a/resources/sass/partials/_main.scss
+++ b/resources/sass/partials/_main.scss
@@ -72,6 +72,9 @@ main{
         &:hover{
           // box-shadow: 0px 1px 4px 2px grey;
           box-shadow: 0px 1px 4px 2px  #ff5722;
+          transform: scale(1.2);
+          z-index: 1000;
+          @include transition;
         }
 
         // & img{
@@ -115,6 +118,7 @@ main{
 
           &:hover{
             color: white;
+            @include transition;
           }
 
           // &.rainbow-text {
