--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10949,7 +10949,7 @@ a.text-dark:focus {
 }
 
 body {
-  width: 100vW;
+  width: 100%;
 }
 
 body #app {
@@ -11037,6 +11037,7 @@ footer .container .card {
   padding: 20px;
   background-color: #464646;
   color: white;
+  border-radius: 5%;
 }
 
 footer .container .card h3 {
@@ -11054,6 +11055,7 @@ footer .container .card ul li {
 
 footer .container .card ul li:hover {
   color: orange;
+  cursor: pointer;
 }
 
 footer .font {
@@ -11070,14 +11072,17 @@ footer .font i {
 
 footer .font .fb-blue:hover {
   color: blue;
+  cursor: pointer;
 }
 
 footer .font .inst-red:hover {
   color: red;
+  cursor: pointer;
 }
 
 footer .font .twt-lightblue:hover {
   color: lightblue;
+  cursor: pointer;
 }
 
 main {
@@ -11098,7 +11103,6 @@ main .choose-restaurant .guest-restaurants {
 main .choose-restaurant .guest-restaurants .card-restaurant {
   width: calc(100% / 3 - 40px);
   height: 400px;
-  margin-right: 40px;
   border: 1px solid #ff5722;
   display: flex;
   flex-direction: column;
@@ -11132,5 +11136,64 @@ main .choose-restaurant .guest-restaurants .card-restaurant button {
   border: 0px;
   font-size: 20px;
   color: yellow;
+}
+
+main .container-fluid,
+main .container-sm,
+main .container-md,
+main .container-lg,
+main .container-xl {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 30px;
+}
+
+main .container-fluid .card,
+main .container-sm .card,
+main .container-md .card,
+main .container-lg .card,
+main .container-xl .card {
+  width: 50%;
+  padding: 20px;
+  justify-content: center;
+  text-align: center;
+}
+
+main .container-fluid .card .img-fluid,
+main .container-sm .card .img-fluid,
+main .container-md .card .img-fluid,
+main .container-lg .card .img-fluid,
+main .container-xl .card .img-fluid {
+  width: 50%;
+  padding: 10px;
+  display: block;
+  margin: 0px auto;
+  text-align: center;
+}
+
+main .container-fluid .card .card-body img,
+main .container-sm .card .card-body img,
+main .container-md .card .card-body img,
+main .container-lg .card .card-body img,
+main .container-xl .card .card-body img {
+  width: 40%;
+}
+
+main .container-fluid .card .card-body img:hover,
+main .container-sm .card .card-body img:hover,
+main .container-md .card .card-body img:hover,
+main .container-lg .card .card-body img:hover,
+main .container-xl .card .card-body img:hover {
+  cursor: pointer;
+}
+
+main .container-fluid .card .card-text,
+main .container-sm .card .card-text,
+main .container-md .card .card-text,
+main .container-lg .card .card-text,
+main .container-xl .card .card-text {
+  font-size: 40px;
+  font-weight: 500;
+  margin-top: 20px;
 }
 
