--- a/resources/sass/partials/_main.scss
+++ b/resources/sass/partials/_main.scss
@@ -16,7 +16,7 @@ main{
       & .card-restaurant{
         width: calc(100% / 3 - 40px);
         height: 400px;
-        margin-right: 40px;
+        
         border: 1px solid #ff5722;
         display: flex;
         flex-direction: column;
@@ -59,5 +59,43 @@ main{
     }
   }
 
-  // fine sezione ristoranti
-}
+  // FINE SEZIONE RISTORANTI
+
+  .container-fluid{
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 30px;
+  
+    .card{
+      width: 50%;    
+      padding:20px;
+      justify-content: center;
+      text-align: center;
+      
+          .img-fluid{
+            width:50%;    
+            padding:10px;
+            display:block;
+            margin:0px auto;
+            text-align:center;
+          }
+          .card-body img{
+            width: 40%;
+          }
+          .card-body img:hover{
+            cursor:pointer;
+          }
+   
+   
+        .card-text{
+         font-size: 40px;
+         font-weight:500;
+         margin-top:20px;     
+         }   
+    } //fine card
+  } //fine container-fluid
+
+  // FINE SEZIONE TELEFONO
+
+} //fine main
+
